# skyfi-ecvi

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.test.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: audit.py  auth.py  companies.py  contact_verification.py  data_corrections.py  metrics.py  reports.py  reviews.py  risk_scoring.py  security.py
backend/app/core/: audit.py  auth.py  config.py  security.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: a1b2c3d4e5f6_add_shared_reports_table.py  b2c3d4e5f6a7_add_data_corrections_table.py  c3d4e5f6a7b8_add_contact_verification_results_table.py  d4e5f6a7b8c9_add_performance_indexes.py  ee425b78336f_initial_migration_create_all_tables.py
backend/app/middleware/: metrics.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  audit.py  company.py  company_data.py  contact_verification.py  data_correction.py  review.py  user.py  verification_result.py
backend/app/services/: ai_service.py  business_directory.py  cache_service.py  confidence_scoring.py  contact_verification.py  contact_verification_enhanced.py  data_collection.py  data_correction.py  discrepancy_detection.py  dns_verification.py  registration_verification.py  report_generator.py  report_sharing.py  risk_calculator.py  risk_history.py  security_audit.py  task_queue.py  verification_service.py  web_scraper.py
backend/app/tasks/: __init__.py  analysis_tasks.py  celery_app.py
backend/app/utils/: exporters.py  query_optimizer.py  security.py  validators.py
backend/load_tests/: README.md  locustfile.py
backend/scripts/: create_admin.py
backend/tests/: README.md  __init__.py  conftest.py  test_ai_service_integration.py  test_api_auth.py  test_api_companies.py  test_api_contact_verification.py  test_api_data_corrections.py  test_api_reports.py  test_api_reviews.py  test_api_risk_scoring.py  test_business_directory.py  test_confidence_scoring.py  test_contact_verification.py  test_data_collection.py  test_data_correction.py  test_discrepancy_detection.py  test_dns_verification.py  test_exporters.py  test_performance.py  test_registration_verification.py  test_report_generator.py  test_report_sharing.py  test_risk_calculator.py  test_risk_history.py  test_security.py  test_security_audit.py  test_task_queue.py  test_validators.py  test_verification_service.py  test_web_scraper.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CI_CD.md  DEPLOYMENT.md  MONITORING.md  OPERATOR_QUICK_REFERENCE.md  OPERATOR_TRAINING.md  OPERATOR_TROUBLESHOOTING.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_TESTING.md  PRD.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_SUMMARY.md  RUNBOOKS.md  SECURITY_AUDIT.md  TESTING.md  TRAINING_SLIDES_OUTLINE.md  UAT_TEST_SCENARIOS.md  USER_GUIDE.md
(+79 files in other folders)
